fixed text color, alignment and removed default message from being annoying

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -22,6 +22,11 @@ li.trip-buddies {
   text-decoration: underline;
 }
 
+/* used for line breaks in chat box */
+.linebreaks {
+white-space:pre;            
+}
+
 
 /* ------------- CHAT STYLING ------------- */
 .chat {
@@ -30,6 +35,7 @@ li.trip-buddies {
   overflow-y: scroll;
 	font-size: 15px;
 	font-weight: normal;
+  height: 100%;
   /*border-right: thin solid lightgray;*/
 }
 
@@ -40,6 +46,7 @@ li.trip-buddies {
    height:30px;
    width:100%;
 }
+
 section {
 	max-width: 100%;
 	margin: 50px auto;
@@ -65,6 +72,7 @@ section div {
 	background:#0B93F6;
 	border-radius:25px;
 	float: right;
+  width: 100%;
 
 }
 
@@ -100,6 +108,7 @@ section div {
 	border-radius:25px;
 	color: black;
   float: left;
+  width: 100%;
 }
 
 .from-them :before {
